--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,3 +1,76 @@
+[v-cloak] {
+  visibility: hidden;
+}
+
+.flex {
+  display: flex;
+  &.is-center{
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.flex-item,.flex-spacing {
+  flex: 1;
+  height: 100%;
+  min-width: 0;
+}
+
+.img-responsive {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.img-circle {
+  border-radius: 50%;
+}
+
+.v-modal-enter {
+  animation: v-modal-in .2s ease;
+}
+
+.v-modal-leave {
+  animation: v-modal-out .2s ease forwards;
+}
+
+@keyframes v-modal-in {
+  0% {
+      opacity: 0;
+  }
+}
+
+@keyframes v-modal-out {
+  to {
+      opacity: 0;
+  }
+}
+
+.v-modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: .5;
+  background: #000;
+}
+
+.layout-wrap {
+  display: flex;
+  flex-direction: column;
+  &.is-page{
+    height: 100vh;
+  }
+}
+
+.content-wrap {
+  flex: 1;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+
 .clearfix:after {
   display: block;
   clear: both;
