--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,3 +1,13 @@
+html{
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+}
+
+body{
+  background-color: #f8f8f8;
+}
+
+html, body { scroll-behavior:smooth; }
+
 [v-cloak] {
   visibility: hidden;
 }
